Updated swagger definitions with new endpoint formats
